--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "ng-emoji-picker",
-  "version": "0.13.1",
-  "location": "https://github.com/kimooz/ng-emoji-picker",
-  "homepage": "https://github.com/kimooz/ng-emoji-picker",
+  "version": "0.13.4",
+  "location": "https://github.com/Alibrate/ng-emoji-picker",
+  "homepage": "https://github.com/Alibrate/ng-emoji-picker",
   "main": [
     "js/nanoscroller.min.js",
     "js/tether.min.js",
@@ -16,6 +16,6 @@
   "description": "Emoji Picker Directive for Angular JS",
   "dependencies": {
     "angular": ">=1.3.0",
-    "jquery": "~3.1.1"
+    "jquery": ">=3.2.1"
   }
 }
